--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
       Контакты в шапке
       </div>
     </header>
-
     <section class="hero-image">
       <div class="container">
-      <h1 class="heading">Неопознанный Енот</h1>
+      <h1 class="heading">Опознанный Енот</h1>
       <p>Junior верстальщик</p>
       </div>
     </section>
